fix(breadcrumbs): do not wrap text

--- a/components/breadcrumbs/server.css
+++ b/components/breadcrumbs/server.css
@@ -14,6 +14,8 @@
   padding-block: 0.2rem;
   padding-inline: var(--breadcrumbs-side-padding);
 
+  text-wrap: nowrap;
+
   background-color: var(--color-background-secondary);
 
   &[data-scheme="dark"] {
